<resources>
    <string name="app_name">E-learning_restaurants</string>
    <string name="loginText" translatable="false">Login</string>
    <string name="passwordText">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegister">Register</string>
    <string name="emailText" translatable="false">E-mail</string>
    <string name="buttonSubmit">Submit</string>
    <string name="buttonAddRestaurant">Add restaurant</string>
    <string name="errorTitle">Error!</string>
    <string name="errorEmptyFields">The fields should not be empty!</string>
    <string name="errorLoginIncorrect">Login and\\or password is not correct.</string>
    <string name="errorAccountExist">An account with that username already exist</string>
    <string name="infoRegisterSuccessful">Your account has been register.</string>
    <string name="title_activity_main2">s</string>
    <string name="inputRestaurantName">Restaurant name</string>
    <string name="inputRestaurantPhone">Phone number</string>
    <string name="buttonGps">Get GPS position</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>