<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/et_Login"
        android:layout_width="306dp"
        android:layout_height="63dp"
        android:layout_marginTop="112dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/loginText"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Login"
        android:autofillHints="" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="296dp"
        android:layout_height="57dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="28dp"
        android:background="#004746"
        android:text="@string/buttonLogin"
        android:textColorLink="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

    <TextView
        android:id="@+id/tv_Register"
        android:layout_width="296dp"
        android:layout_height="33dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="372dp"
        android:text="@string/buttonRegister"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>