<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/et_RegisterLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/loginText"
        android:inputType="text"
        android:text="@string/loginText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_RegisterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RegisterLogin" />

    <EditText
        android:id="@+id/et_RegisterEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/emailText"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RegisterPassword" />

    <Button
        android:id="@+id/btn_RegisterSubmit"
        android:layout_width="147dp"
        android:layout_height="45dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="64dp"
        android:text="@string/buttonSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RegisterEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>