<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurantActivity">

    <EditText
        android:id="@+id/et_RestaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="83dp"
        android:ems="10"
        android:hint="@string/inputRestaurantName"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_RestaurantPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/inputRestaurantPhone"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RestaurantName" />

    <Button
        android:id="@+id/btn_AddRestaurantSubmit"
        android:layout_width="209dp"
        android:layout_height="53dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="47dp"
        android:text="@string/buttonSubmit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RestaurantPhone" />

    <Button
        android:id="@+id/btn_GetGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="127dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/buttonGps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_AddRestaurantSubmit" />

    <TextView
        android:id="@+id/tv_Position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="204dp"
        android:layout_marginTop="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_GetGPS" />
</androidx.constraintlayout.widget.ConstraintLayout>